--- a/package.json
+++ b/package.json
@@ -1,10 +1,23 @@
 {
   "name": "datasource-plugin-clouderamanager",
-  "version": "0.9.2",
-  "description": "Cloudera Manager datasource for Grafana 3.x.x",
+  "version": "1.0.0",
+  "description": "Cloudera Manager datasource for Grafana 9.x.x",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/foursquare/datasource-plugin-clouderamanager"
+  },
+  "scripts": {
+    "build": "webpack -c ./.config/webpack/webpack.config.ts --env production",
+    "dev": "webpack -w -c ./.config/webpack/webpack.config.ts --env development",
+    "test": "jest --watch --onlyChanged",
+    "test:ci": "jest --passWithNoTests --maxWorkers 4",
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint --cache --ignore-path ./.gitignore --ext .js,.jsx,.ts,.tsx .",
+    "lint:fix": "yarn lint --fix",
+    "e2e": "yarn cypress install && yarn grafana-e2e run",
+    "e2e:update": "yarn cypress install && yarn grafana-e2e run --update-screenshots",
+    "server": "docker-compose up --build",
+    "sign": "npx --yes @grafana/sign-plugin@latest"
   },
   "author": "Foursquare Labs, Inc.",
   "license": "Apache-2.0",
@@ -12,20 +25,51 @@
     "url": "https://github.com/foursquare/datasource-plugin-clouderamanager/issues"
   },
   "devDependencies": {
-    "grunt": "^1.0.0",
-    "babel": "~6.5.2",
-    "grunt-babel": "~6.0.0",
-    "grunt-contrib-clean": "~1.0.0",
-    "grunt-contrib-compress": "~1.3.0",
-    "grunt-contrib-copy": "~1.0.0",
-    "grunt-contrib-watch": "~1.0.0",
-    "grunt-systemjs-builder": "^0.2.5",
-    "load-grunt-tasks": "~3.5.0"
+    "@babel/core": "^7.16.7",
+    "@grafana/e2e": "9.x.x",
+    "@grafana/e2e-selectors": "9.x.x",
+    "@grafana/eslint-config": "^5.1.0",
+    "@grafana/tsconfig": "^1.2.0-rc1",
+    "@swc/core": "^1.2.144",
+    "@swc/helpers": "^0.4.12",
+    "@swc/jest": "^0.2.23",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.4",
+    "@types/glob": "^8.0.0",
+    "@types/jest": "^29.2.2",
+    "@types/lodash": "^4.14.188",
+    "@types/node": "^18.11.9",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.7.1",
+    "eslint-webpack-plugin": "^3.1.1",
+    "fork-ts-checker-webpack-plugin": "^7.2.0",
+    "glob": "^8.0.3",
+    "identity-obj-proxy": "3.0.0",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "prettier": "^2.5.0",
+    "replace-in-file-webpack-plugin": "^1.0.6",
+    "sass": "1.56.1",
+    "sass-loader": "13.2.0",
+    "style-loader": "3.3.1",
+    "swc-loader": "^0.2.3",
+    "tsconfig-paths": "^4.1.0",
+    "ts-node": "^10.5.0",
+    "typescript": "^4.4.0",
+    "webpack": "^5.69.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-livereload-plugin": "^3.0.2"
   },
+  "engines": {
+    "node": ">=16"
+  },
+  "homepage": "https://github.com/foursquare/datasource-plugin-clouderamanager",
   "dependencies": {
-    "babel-plugin-transform-es2015-modules-systemjs": "^6.5.0",
-    "babel-preset-es2015": "^6.5.0",
-    "lodash": "^4.13.0"
-  },
-  "homepage": "https://github.com/foursquare/datasource-plugin-clouderamanager"
+    "@emotion/css": "^11.1.3",
+    "@grafana/data": "9.x.x",
+    "@grafana/runtime": "9.x.x",
+    "@grafana/ui": "9.x.x",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
+  }
 }
